completed first draft for review

--- a/styles/blocks/digits/digits.css
+++ b/styles/blocks/digits/digits.css
@@ -2,6 +2,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px 0;
 }
