--- a/styles/blocks/pages/index.css
+++ b/styles/blocks/pages/index.css
@@ -1,13 +1,19 @@
-@import url(../../../vendor/normalize.css);
-@import url(../../blocks/root/page.css);
-@import url(../../blocks/header/header.css);
-@import url(../../blocks/logo/logo.css);
-@import url(../../blocks/description/description.css);
-@import url(../../blocks/two-columns/two-columns.css);
-@import url(../../blocks/digits/digits.css);
-@import url(../../blocks/section-title/section-title.css);
-@import url(../../blocks/section-subtitle/section-subtitle.css);
-@import url(../../blocks/table/table.css);
-@import url(../../blocks/feynman/feynman.css);
-@import url(../../blocks/kaufman/kaufman.css);
-@import url(../../blocks/footer/footer.css);
+@import url(/vendor/normalize.css);
+@import url(../root/page.css);
+@import url(../header/header.css);
+@import url(../logo/logo.css);
+@import url(../description/description.css);
+@import url(../two-columns/two-columns.css);
+@import url(../section-title/section-title.css);
+@import url(../section-subtitle/section-subtitle.css);
+@import url(../techniques/techniques.css);
+@import url(../cards/cards.css);
+@import url(../video/video.css);
+@import url(../oakley/oakley.css);
+@import url(../feynman/feynman.css);
+@import url(../digits/digits.css);
+@import url(../table/table.css);
+@import url(../khan/khan.css);
+@import url(../kaufman/kaufman.css);
+@import url(../resources/resources.css);
+@import url(../footer/footer.css);
