--- a/styles/blocks/section-subtitle/section-subtitle.css
+++ b/styles/blocks/section-subtitle/section-subtitle.css
@@ -4,8 +4,7 @@
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0 auto;
     width: 60%;
     text-align: center;
 }
