--- a/styles/blocks/section-title/section-title.css
+++ b/styles/blocks/section-title/section-title.css
@@ -1,11 +1,10 @@
 @import url(./_theme/section-title_theme_dark.css);
 
 .section-title {
-    line-height: 69px;
+    line-height: 1.15;
     font-size: 60px;
     font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 20px;
     width: 60%;
-    text-align: center;
+    text-align: center;    
+    margin: 0 auto 20px;
 }
