--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,7 @@
 .khan__book-pic {
-    width: 608px;
-    height: 620px;
-    margin: 0 20px -220px 0;
+    width: 620px;
+    height: 608px;
+    object-fit: cover;
+    object-position: 0 0;
+    margin: 0 20px 0 0;
 }
