--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,7 +4,7 @@
 
 .feynman {
     background-color: #f2f2f2;
-    background-image: url(../../../images/feinman.png);
+    background-image: url(../../images/feinman.png);
     background-position: bottom left;
     background-repeat: no-repeat;
     background-size: 867px 637px;
